# weather-api

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  met_office.rs  schema.rs
src/met_office/: direction.rs  forecast.rs  forecast_response.rs  forecasts.rs  location.rs  uv.rs  visibility.rs  visiblity.rs  weather_type.rs
