[package]
name = "weather-api"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.4.0"
actix-web = "3"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.7.1"
isahc = { version = "0.9", features = ["json"] }
juniper = "0.14.2"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
thiserror = "1.0.21"
